--- a/spec/fixtures/notion/block_append_children.yml
+++ b/spec/fixtures/notion/block_append_children.yml
@@ -5,7 +5,7 @@ http_interactions:
     uri: https://api.notion.com/v1/blocks/32af3324-ba02-4516-ae88-5728a4d569f4/children
     body:
       encoding: UTF-8
-      string: '{"block_id":"32af3324-ba02-4516-ae88-5728a4d569f4","children":[{"object":"block","type":"paragraph","paragraph":{"text":[{"type":"text","text":{"content":"Another
+      string: '{"children":[{"object":"block","type":"paragraph","paragraph":{"text":[{"type":"text","text":{"content":"Another
         children"}}]}}]}'
     headers:
       Accept:
@@ -15,7 +15,7 @@ http_interactions:
       Authorization:
       - Bearer <NOTION_API_TOKEN>
       Notion-Version:
-      - '2021-05-13'
+      - '2021-08-16'
       Content-Type:
       - application/json
       Accept-Encoding:
@@ -26,7 +26,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Sun, 29 Aug 2021 17:18:09 GMT
+      - Sun, 29 Aug 2021 17:45:06 GMT
       Content-Type:
       - application/json; charset=utf-8
       Transfer-Encoding:
@@ -126,10 +126,10 @@ http_interactions:
         https://github.githubassets.com https://js.chilipiper.com https://platform.twitter.com
         https://ton.twimg.com; frame-src https: http:; media-src https: http:'
       Set-Cookie:
-      - notion_browser_id=548f13df-8a1c-4589-bf89-26b5a4fb5857; Domain=www.notion.so;
-        Path=/; Expires=Wed, 07 May 2053 19:04:48 GMT; Secure
+      - notion_browser_id=90e47682-16cc-4ae0-aec6-c0bc152d2ef5; Domain=www.notion.so;
+        Path=/; Expires=Wed, 07 May 2053 19:31:46 GMT; Secure
       Etag:
-      - W/"1c9-RV2WR8+djapd2GV8p8VntQ5R7zI"
+      - W/"1f8-q0E++mHLkdidPRLHaNfXLa3OZEo"
       Vary:
       - Accept-Encoding
       Cf-Cache-Status:
@@ -139,11 +139,11 @@ http_interactions:
       Server:
       - cloudflare
       Cf-Ray:
-      - 68676fd5889b32c8-CDG
+      - 6867975778e940b7-CDG
     body:
       encoding: UTF-8
-      string: '{"object":"block","id":"32af3324-ba02-4516-ae88-5728a4d569f4","created_time":"2021-05-01T17:13:00.000Z","last_edited_time":"2021-08-29T17:18:00.000Z","has_children":true,"type":"paragraph","paragraph":{"text":[{"type":"text","text":{"content":"A
-        paragraph with childrens","link":null},"annotations":{"bold":false,"italic":false,"strikethrough":false,"underline":false,"code":false,"color":"default"},"plain_text":"A
-        paragraph with childrens","href":null}]}}'
-  recorded_at: Sun, 29 Aug 2021 17:18:09 GMT
+      string: '{"object":"list","results":[{"object":"block","id":"32ac99eb-3d4b-4dde-9ce2-e38a95bf004e","created_time":"2021-08-29T17:45:00.000Z","last_edited_time":"2021-08-29T17:45:00.000Z","has_children":false,"type":"paragraph","paragraph":{"text":[{"type":"text","text":{"content":"Another
+        children","link":null},"annotations":{"bold":false,"italic":false,"strikethrough":false,"underline":false,"code":false,"color":"default"},"plain_text":"Another
+        children","href":null}]}}],"next_cursor":null,"has_more":false}'
+  recorded_at: Sun, 29 Aug 2021 17:45:06 GMT
 recorded_with: VCR 6.0.0
