--- a/spec/fixtures/notion/update_block.yml
+++ b/spec/fixtures/notion/update_block.yml
@@ -5,8 +5,7 @@ http_interactions:
     uri: https://api.notion.com/v1/blocks/6e842658-eb3d-4ea9-9bbf-e86104151729
     body:
       encoding: UTF-8
-      string: '{"block_id":"6e842658-eb3d-4ea9-9bbf-e86104151729","to_do":{"text":[{"text":{"content":"A
-        todo"}}],"checked":true}}'
+      string: '{"to_do":{"text":[{"text":{"content":"A todo"}}],"checked":true}}'
     headers:
       Accept:
       - application/json; charset=utf-8
@@ -15,7 +14,7 @@ http_interactions:
       Authorization:
       - Bearer <NOTION_API_TOKEN>
       Notion-Version:
-      - '2021-05-13'
+      - '2021-08-16'
       Content-Type:
       - application/json
       Accept-Encoding:
@@ -26,7 +25,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Sun, 29 Aug 2021 17:30:05 GMT
+      - Sun, 29 Aug 2021 17:45:02 GMT
       Content-Type:
       - application/json; charset=utf-8
       Transfer-Encoding:
@@ -126,10 +125,10 @@ http_interactions:
         https://github.githubassets.com https://js.chilipiper.com https://platform.twitter.com
         https://ton.twimg.com; frame-src https: http:; media-src https: http:'
       Set-Cookie:
-      - notion_browser_id=af4e9a4a-ae92-40c8-bc5a-2b5178ddd92b; Domain=www.notion.so;
-        Path=/; Expires=Wed, 07 May 2053 19:16:45 GMT; Secure
+      - notion_browser_id=9b609b0b-5d6b-446e-9cff-3cac85a1f76d; Domain=www.notion.so;
+        Path=/; Expires=Wed, 07 May 2053 19:31:42 GMT; Secure
       Etag:
-      - W/"1a9-RYoXFoRtujEUJnK34b1vBFMfeEI"
+      - W/"1a9-KpgP0oaUKRBY/DiZAiRKYKqR5xg"
       Vary:
       - Accept-Encoding
       Cf-Cache-Status:
@@ -139,11 +138,11 @@ http_interactions:
       Server:
       - cloudflare
       Cf-Ray:
-      - 686781542a3c3aab-CDG
+      - 68679738b8ac40c9-CDG
     body:
       encoding: UTF-8
-      string: '{"object":"block","id":"6e842658-eb3d-4ea9-9bbf-e86104151729","created_time":"2021-05-01T15:44:00.000Z","last_edited_time":"2021-08-29T17:30:00.000Z","has_children":false,"type":"to_do","to_do":{"text":[{"type":"text","text":{"content":"A
+      string: '{"object":"block","id":"6e842658-eb3d-4ea9-9bbf-e86104151729","created_time":"2021-05-01T15:44:00.000Z","last_edited_time":"2021-08-29T17:45:00.000Z","has_children":false,"type":"to_do","to_do":{"text":[{"type":"text","text":{"content":"A
         todo","link":null},"annotations":{"bold":false,"italic":false,"strikethrough":false,"underline":false,"code":false,"color":"default"},"plain_text":"A
         todo","href":null}],"checked":true}}'
-  recorded_at: Sun, 29 Aug 2021 17:30:05 GMT
+  recorded_at: Sun, 29 Aug 2021 17:45:02 GMT
 recorded_with: VCR 6.0.0
