--- a/spec/fixtures/notion/users.yml
+++ b/spec/fixtures/notion/users.yml
@@ -10,9 +10,11 @@ http_interactions:
       Accept:
       - application/json; charset=utf-8
       User-Agent:
-      - Notion Ruby Client/0.0.4
+      - Notion Ruby Client/0.0.8
       Authorization:
       - Bearer <NOTION_API_TOKEN>
+      Notion-Version:
+      - '2021-08-16'
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
   response:
@@ -21,18 +23,13 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Sun, 25 Apr 2021 21:00:08 GMT
+      - Sun, 29 Aug 2021 17:57:02 GMT
       Content-Type:
       - application/json; charset=utf-8
       Transfer-Encoding:
       - chunked
       Connection:
       - keep-alive
-      Set-Cookie:
-      - __cfduid=d10c7505ad45dea19d885ea9e087883651619384407; expires=Tue, 25-May-21
-        21:00:07 GMT; path=/; domain=.notion.com; HttpOnly; SameSite=Lax
-      - notion_browser_id=6378e6be-b1ca-4d94-b556-8f3ae50d725f; Domain=www.notion.so;
-        Path=/; Expires=Wed, 01 Jan 2053 22:46:48 GMT; Secure
       X-Dns-Prefetch-Control:
       - 'off'
       X-Frame-Options:
@@ -51,82 +48,98 @@ http_interactions:
       - 'script-src ''self'' ''unsafe-inline'' ''unsafe-eval'' https://gist.github.com
         https://apis.google.com https://api.amplitude.com https://widget.intercom.io
         https://js.intercomcdn.com https://logs-01.loggly.com https://cdn.segment.com
-        https://analytics.pgncs.notion.so https://checkout.stripe.com https://js.stripe.com/v3
-        https://embed.typeform.com https://admin.typeform.com https://platform.twitter.com
-        https://cdn.syndication.twimg.com https://www.googletagmanager.com https://x.clearbitjs.com;
-        connect-src ''self'' https://msgstore.www.notion.so wss://msgstore.www.notion.so
-        ws://localhost:* https://notion-emojis.s3-us-west-2.amazonaws.com https://s3-us-west-2.amazonaws.com
-        https://s3.us-west-2.amazonaws.com https://notion-production-snapshots-2.s3.us-west-2.amazonaws.com
+        https://analytics.pgncs.notion.so https://o324374.ingest.sentry.io https://checkout.stripe.com
+        https://js.stripe.com https://embed.typeform.com https://admin.typeform.com
+        https://public.profitwell.com js.sentry-cdn.com https://js.chilipiper.com
+        https://platform.twitter.com https://cdn.syndication.twimg.com https://www.googletagmanager.com
+        https://x.clearbitjs.com https://client-registry.mutinycdn.com https://client.mutinycdn.com/
+        https://user-data.mutinycdn.com; connect-src ''self'' https://msgstore.www.notion.so
+        wss://msgstore.www.notion.so ws://localhost:* https://notion-emojis.s3-us-west-2.amazonaws.com
+        https://s3-us-west-2.amazonaws.com https://s3.us-west-2.amazonaws.com https://notion-production-snapshots-2.s3.us-west-2.amazonaws.com
         https: http: https://api.amplitude.com https://api.embed.ly https://js.intercomcdn.com
         https://api-iam.intercom.io wss://nexus-websocket-a.intercom.io https://logs-01.loggly.com
-        https://api.segment.io https://api.pgncs.notion.so https://checkout.stripe.com
-        https://js.stripe.com/v3 https://cdn.contentful.com https://preview.contentful.com
-        https://images.ctfassets.net https://api.unsplash.com https://boards-api.greenhouse.io;
-        font-src ''self'' data: https://cdnjs.cloudflare.com https://js.intercomcdn.com;
-        img-src ''self'' data: blob: https: https://platform.twitter.com https://syndication.twitter.com
-        https://pbs.twimg.com https://ton.twimg.com www.googletagmanager.com; style-src
-        ''self'' ''unsafe-inline'' https://cdnjs.cloudflare.com https://github.githubassets.com
-        https://platform.twitter.com https://ton.twimg.com; frame-src https: http:;
-        media-src https: http:'
+        https://cdn.segment.com https://api.segment.io https://analytics.pgncs.notion.so
+        https://api.pgncs.notion.so https://o324374.ingest.sentry.io https://checkout.stripe.com
+        https://js.stripe.com https://cdn.contentful.com https://preview.contentful.com
+        https://images.ctfassets.net https://www2.profitwell.com https://tracking.chilipiper.com
+        https://api.chilipiper.com https://api.unsplash.com https://boards-api.greenhouse.io
+        https://user-data.mutinycdn.com https://api-v2.mutinyhq.io https://api.statuspage.io
+        https://pgncd.notion.so; font-src ''self'' data: https://cdnjs.cloudflare.com
+        https://js.intercomcdn.com; img-src ''self'' data: blob: https: https://platform.twitter.com
+        https://syndication.twitter.com https://pbs.twimg.com https://ton.twimg.com
+        www.googletagmanager.com; style-src ''self'' ''unsafe-inline'' https://cdnjs.cloudflare.com
+        https://github.githubassets.com https://js.chilipiper.com https://platform.twitter.com
+        https://ton.twimg.com; frame-src https: http:; media-src https: http:'
       X-Content-Security-Policy:
       - 'script-src ''self'' ''unsafe-inline'' ''unsafe-eval'' https://gist.github.com
         https://apis.google.com https://api.amplitude.com https://widget.intercom.io
         https://js.intercomcdn.com https://logs-01.loggly.com https://cdn.segment.com
-        https://analytics.pgncs.notion.so https://checkout.stripe.com https://js.stripe.com/v3
-        https://embed.typeform.com https://admin.typeform.com https://platform.twitter.com
-        https://cdn.syndication.twimg.com https://www.googletagmanager.com https://x.clearbitjs.com;
-        connect-src ''self'' https://msgstore.www.notion.so wss://msgstore.www.notion.so
-        ws://localhost:* https://notion-emojis.s3-us-west-2.amazonaws.com https://s3-us-west-2.amazonaws.com
-        https://s3.us-west-2.amazonaws.com https://notion-production-snapshots-2.s3.us-west-2.amazonaws.com
+        https://analytics.pgncs.notion.so https://o324374.ingest.sentry.io https://checkout.stripe.com
+        https://js.stripe.com https://embed.typeform.com https://admin.typeform.com
+        https://public.profitwell.com js.sentry-cdn.com https://js.chilipiper.com
+        https://platform.twitter.com https://cdn.syndication.twimg.com https://www.googletagmanager.com
+        https://x.clearbitjs.com https://client-registry.mutinycdn.com https://client.mutinycdn.com/
+        https://user-data.mutinycdn.com; connect-src ''self'' https://msgstore.www.notion.so
+        wss://msgstore.www.notion.so ws://localhost:* https://notion-emojis.s3-us-west-2.amazonaws.com
+        https://s3-us-west-2.amazonaws.com https://s3.us-west-2.amazonaws.com https://notion-production-snapshots-2.s3.us-west-2.amazonaws.com
         https: http: https://api.amplitude.com https://api.embed.ly https://js.intercomcdn.com
         https://api-iam.intercom.io wss://nexus-websocket-a.intercom.io https://logs-01.loggly.com
-        https://api.segment.io https://api.pgncs.notion.so https://checkout.stripe.com
-        https://js.stripe.com/v3 https://cdn.contentful.com https://preview.contentful.com
-        https://images.ctfassets.net https://api.unsplash.com https://boards-api.greenhouse.io;
-        font-src ''self'' data: https://cdnjs.cloudflare.com https://js.intercomcdn.com;
-        img-src ''self'' data: blob: https: https://platform.twitter.com https://syndication.twitter.com
-        https://pbs.twimg.com https://ton.twimg.com www.googletagmanager.com; style-src
-        ''self'' ''unsafe-inline'' https://cdnjs.cloudflare.com https://github.githubassets.com
-        https://platform.twitter.com https://ton.twimg.com; frame-src https: http:;
-        media-src https: http:'
+        https://cdn.segment.com https://api.segment.io https://analytics.pgncs.notion.so
+        https://api.pgncs.notion.so https://o324374.ingest.sentry.io https://checkout.stripe.com
+        https://js.stripe.com https://cdn.contentful.com https://preview.contentful.com
+        https://images.ctfassets.net https://www2.profitwell.com https://tracking.chilipiper.com
+        https://api.chilipiper.com https://api.unsplash.com https://boards-api.greenhouse.io
+        https://user-data.mutinycdn.com https://api-v2.mutinyhq.io https://api.statuspage.io
+        https://pgncd.notion.so; font-src ''self'' data: https://cdnjs.cloudflare.com
+        https://js.intercomcdn.com; img-src ''self'' data: blob: https: https://platform.twitter.com
+        https://syndication.twitter.com https://pbs.twimg.com https://ton.twimg.com
+        www.googletagmanager.com; style-src ''self'' ''unsafe-inline'' https://cdnjs.cloudflare.com
+        https://github.githubassets.com https://js.chilipiper.com https://platform.twitter.com
+        https://ton.twimg.com; frame-src https: http:; media-src https: http:'
       X-Webkit-Csp:
       - 'script-src ''self'' ''unsafe-inline'' ''unsafe-eval'' https://gist.github.com
         https://apis.google.com https://api.amplitude.com https://widget.intercom.io
         https://js.intercomcdn.com https://logs-01.loggly.com https://cdn.segment.com
-        https://analytics.pgncs.notion.so https://checkout.stripe.com https://js.stripe.com/v3
-        https://embed.typeform.com https://admin.typeform.com https://platform.twitter.com
-        https://cdn.syndication.twimg.com https://www.googletagmanager.com https://x.clearbitjs.com;
-        connect-src ''self'' https://msgstore.www.notion.so wss://msgstore.www.notion.so
-        ws://localhost:* https://notion-emojis.s3-us-west-2.amazonaws.com https://s3-us-west-2.amazonaws.com
-        https://s3.us-west-2.amazonaws.com https://notion-production-snapshots-2.s3.us-west-2.amazonaws.com
+        https://analytics.pgncs.notion.so https://o324374.ingest.sentry.io https://checkout.stripe.com
+        https://js.stripe.com https://embed.typeform.com https://admin.typeform.com
+        https://public.profitwell.com js.sentry-cdn.com https://js.chilipiper.com
+        https://platform.twitter.com https://cdn.syndication.twimg.com https://www.googletagmanager.com
+        https://x.clearbitjs.com https://client-registry.mutinycdn.com https://client.mutinycdn.com/
+        https://user-data.mutinycdn.com; connect-src ''self'' https://msgstore.www.notion.so
+        wss://msgstore.www.notion.so ws://localhost:* https://notion-emojis.s3-us-west-2.amazonaws.com
+        https://s3-us-west-2.amazonaws.com https://s3.us-west-2.amazonaws.com https://notion-production-snapshots-2.s3.us-west-2.amazonaws.com
         https: http: https://api.amplitude.com https://api.embed.ly https://js.intercomcdn.com
         https://api-iam.intercom.io wss://nexus-websocket-a.intercom.io https://logs-01.loggly.com
-        https://api.segment.io https://api.pgncs.notion.so https://checkout.stripe.com
-        https://js.stripe.com/v3 https://cdn.contentful.com https://preview.contentful.com
-        https://images.ctfassets.net https://api.unsplash.com https://boards-api.greenhouse.io;
-        font-src ''self'' data: https://cdnjs.cloudflare.com https://js.intercomcdn.com;
-        img-src ''self'' data: blob: https: https://platform.twitter.com https://syndication.twitter.com
-        https://pbs.twimg.com https://ton.twimg.com www.googletagmanager.com; style-src
-        ''self'' ''unsafe-inline'' https://cdnjs.cloudflare.com https://github.githubassets.com
-        https://platform.twitter.com https://ton.twimg.com; frame-src https: http:;
-        media-src https: http:'
+        https://cdn.segment.com https://api.segment.io https://analytics.pgncs.notion.so
+        https://api.pgncs.notion.so https://o324374.ingest.sentry.io https://checkout.stripe.com
+        https://js.stripe.com https://cdn.contentful.com https://preview.contentful.com
+        https://images.ctfassets.net https://www2.profitwell.com https://tracking.chilipiper.com
+        https://api.chilipiper.com https://api.unsplash.com https://boards-api.greenhouse.io
+        https://user-data.mutinycdn.com https://api-v2.mutinyhq.io https://api.statuspage.io
+        https://pgncd.notion.so; font-src ''self'' data: https://cdnjs.cloudflare.com
+        https://js.intercomcdn.com; img-src ''self'' data: blob: https: https://platform.twitter.com
+        https://syndication.twitter.com https://pbs.twimg.com https://ton.twimg.com
+        www.googletagmanager.com; style-src ''self'' ''unsafe-inline'' https://cdnjs.cloudflare.com
+        https://github.githubassets.com https://js.chilipiper.com https://platform.twitter.com
+        https://ton.twimg.com; frame-src https: http:; media-src https: http:'
+      Set-Cookie:
+      - notion_browser_id=2c791cc4-4602-40fd-af43-9cff38e3939f; Domain=www.notion.so;
+        Path=/; Expires=Wed, 07 May 2053 19:43:42 GMT; Secure
       Etag:
       - W/"112-+UfaDnQ0AQtnGmMk1mvOOgv2xyk"
       Vary:
       - Accept-Encoding
       Cf-Cache-Status:
       - DYNAMIC
-      Cf-Request-Id:
-      - '09ac6e2e810000a843f7864000000001'
       Expect-Ct:
       - max-age=604800, report-uri="https://report-uri.cloudflare.com/cdn-cgi/beacon/expect-ct"
       Server:
       - cloudflare
       Cf-Ray:
-      - 645a7fc3fe50a843-CDG
+      - 6867a8cdc8493b49-CDG
     body:
       encoding: UTF-8
       string: '{"object":"user","id":"a8da8d30-c858-4c3d-87ad-3f2d477bd98d","name":"Nicolas
         Goutay","avatar_url":"https://s3-us-west-2.amazonaws.com/public.notion-static.com/5f9b5c65-a7ed-4fc5-983a-6c999b7c2208/Copy_of_P1222454.jpg","type":"person","person":{"email":"nicolas@orbit.love"}}'
-  recorded_at: Sun, 25 Apr 2021 21:00:08 GMT
+  recorded_at: Sun, 29 Aug 2021 17:57:02 GMT
 recorded_with: VCR 6.0.0
