--- a/spec/fixtures/notion/block_append_children.yml
+++ b/spec/fixtures/notion/block_append_children.yml
@@ -5,7 +5,7 @@ http_interactions:
     uri: https://api.notion.com/v1/blocks/32af3324-ba02-4516-ae88-5728a4d569f4/children
     body:
       encoding: UTF-8
-      string: '{"children":[{"object":"block","type":"paragraph","paragraph":{"text":[{"type":"text","text":{"content":"Another
+      string: '{"children":[{"object":"block","type":"paragraph","paragraph":{"rich_text":[{"type":"text","text":{"content":"Another
         children"}}]}}]}'
     headers:
       Accept:
@@ -15,7 +15,7 @@ http_interactions:
       Authorization:
       - Bearer <NOTION_API_TOKEN>
       Notion-Version:
-      - '2021-08-16'
+      - '2022-02-22'
       Content-Type:
       - application/json
       Accept-Encoding:
@@ -142,8 +142,8 @@ http_interactions:
       - 6867975778e940b7-CDG
     body:
       encoding: UTF-8
-      string: '{"object":"list","results":[{"object":"block","id":"32ac99eb-3d4b-4dde-9ce2-e38a95bf004e","created_time":"2021-08-29T17:45:00.000Z","last_edited_time":"2021-08-29T17:45:00.000Z","has_children":false,"type":"paragraph","paragraph":{"text":[{"type":"text","text":{"content":"Another
+      string: '{"object":"list","results":[{"object":"block","id":"32ac99eb-3d4b-4dde-9ce2-e38a95bf004e","created_time":"2021-08-29T17:45:00.000Z","last_edited_time":"2021-08-29T17:45:00.000Z","has_children":false,"type":"paragraph","paragraph":{"rich_text":[{"type":"text","text":{"content":"Another
         children","link":null},"annotations":{"bold":false,"italic":false,"strikethrough":false,"underline":false,"code":false,"color":"default"},"plain_text":"Another
-        children","href":null}]}}],"next_cursor":null,"has_more":false}'
+        children","href":null}]}}],"next_cursor":null,"has_more":false,"type":"block","block":{}}'
   recorded_at: Sun, 29 Aug 2021 17:45:06 GMT
 recorded_with: VCR 6.0.0
