--- a/spec/fixtures/notion/block_children.yml
+++ b/spec/fixtures/notion/block_children.yml
@@ -14,7 +14,7 @@ http_interactions:
       Authorization:
       - Bearer <NOTION_API_TOKEN>
       Notion-Version:
-      - '2021-08-16'
+      - '2022-02-22'
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
   response:
@@ -139,13 +139,13 @@ http_interactions:
       - 6867973e2eb6ee75-CDG
     body:
       encoding: UTF-8
-      string: '{"object":"list","results":[{"object":"block","id":"c183b81c-2973-41c1-867b-7faa0180403d","created_time":"2021-05-01T17:13:00.000Z","last_edited_time":"2021-05-01T17:13:00.000Z","has_children":false,"type":"paragraph","paragraph":{"text":[{"type":"text","text":{"content":"The
+      string: '{"object":"list","results":[{"object":"block","id":"c183b81c-2973-41c1-867b-7faa0180403d","created_time":"2021-05-01T17:13:00.000Z","last_edited_time":"2021-05-01T17:13:00.000Z","has_children":false,"type":"paragraph","paragraph":{"rich_text":[{"type":"text","text":{"content":"The
         first child","link":null},"annotations":{"bold":false,"italic":false,"strikethrough":false,"underline":false,"code":false,"color":"default"},"plain_text":"The
-        first child","href":null}]}},{"object":"block","id":"51ab7653-230b-4332-89e5-4ca2b10e695b","created_time":"2021-05-01T17:13:00.000Z","last_edited_time":"2021-05-01T17:13:00.000Z","has_children":false,"type":"paragraph","paragraph":{"text":[{"type":"text","text":{"content":"The
+        first child","href":null}]}},{"object":"block","id":"51ab7653-230b-4332-89e5-4ca2b10e695b","created_time":"2021-05-01T17:13:00.000Z","last_edited_time":"2021-05-01T17:13:00.000Z","has_children":false,"type":"paragraph","paragraph":{"rich_text":[{"type":"text","text":{"content":"The
         second child","link":null},"annotations":{"bold":false,"italic":false,"strikethrough":false,"underline":false,"code":false,"color":"default"},"plain_text":"The
-        second child","href":null}]}},{"object":"block","id":"722ec5e1-f620-4860-a5fd-6de0430db4a8","created_time":"2021-08-29T17:17:00.000Z","last_edited_time":"2021-08-29T17:17:00.000Z","has_children":false,"type":"paragraph","paragraph":{"text":[{"type":"text","text":{"content":"Another
+        second child","href":null}]}},{"object":"block","id":"722ec5e1-f620-4860-a5fd-6de0430db4a8","created_time":"2021-08-29T17:17:00.000Z","last_edited_time":"2021-08-29T17:17:00.000Z","has_children":false,"type":"paragraph","paragraph":{"rich_text":[{"type":"text","text":{"content":"Another
         children","link":null},"annotations":{"bold":false,"italic":false,"strikethrough":false,"underline":false,"code":false,"color":"default"},"plain_text":"Another
-        children","href":null}]}},{"object":"block","id":"a6cb4553-bdf1-4080-84fa-3e1bceba6912","created_time":"2021-08-29T17:18:00.000Z","last_edited_time":"2021-08-29T17:18:00.000Z","has_children":false,"type":"paragraph","paragraph":{"text":[{"type":"text","text":{"content":"Another
+        children","href":null}]}},{"object":"block","id":"a6cb4553-bdf1-4080-84fa-3e1bceba6912","created_time":"2021-08-29T17:18:00.000Z","last_edited_time":"2021-08-29T17:18:00.000Z","has_children":false,"type":"paragraph","paragraph":{"rich_text":[{"type":"text","text":{"content":"Another
         children","link":null},"annotations":{"bold":false,"italic":false,"strikethrough":false,"underline":false,"code":false,"color":"default"},"plain_text":"Another
         children","href":null}]}}],"next_cursor":null,"has_more":false}'
   recorded_at: Sun, 29 Aug 2021 17:45:02 GMT
