--- a/spec/fixtures/notion/update_block.yml
+++ b/spec/fixtures/notion/update_block.yml
@@ -5,7 +5,7 @@ http_interactions:
     uri: https://api.notion.com/v1/blocks/6e842658-eb3d-4ea9-9bbf-e86104151729
     body:
       encoding: UTF-8
-      string: '{"to_do":{"text":[{"text":{"content":"A todo"}}],"checked":true}}'
+      string: '{"to_do":{"rich_text":[{"text":{"content":"A todo"}}],"checked":true}}'
     headers:
       Accept:
       - application/json; charset=utf-8
@@ -14,7 +14,7 @@ http_interactions:
       Authorization:
       - Bearer <NOTION_API_TOKEN>
       Notion-Version:
-      - '2021-08-16'
+      - '2022-02-22'
       Content-Type:
       - application/json
       Accept-Encoding:
@@ -141,7 +141,7 @@ http_interactions:
       - 68679738b8ac40c9-CDG
     body:
       encoding: UTF-8
-      string: '{"object":"block","id":"6e842658-eb3d-4ea9-9bbf-e86104151729","created_time":"2021-05-01T15:44:00.000Z","last_edited_time":"2021-08-29T17:45:00.000Z","has_children":false,"type":"to_do","to_do":{"text":[{"type":"text","text":{"content":"A
+      string: '{"object":"block","id":"6e842658-eb3d-4ea9-9bbf-e86104151729","created_time":"2021-05-01T15:44:00.000Z","last_edited_time":"2021-08-29T17:45:00.000Z","has_children":false,"type":"to_do","to_do":{"rich_text":[{"type":"text","text":{"content":"A
         todo","link":null},"annotations":{"bold":false,"italic":false,"strikethrough":false,"underline":false,"code":false,"color":"default"},"plain_text":"A
         todo","href":null}],"checked":true}}'
   recorded_at: Sun, 29 Aug 2021 17:45:02 GMT
